--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@nuxt/content": "^3.4.0",
     "@nuxtjs/color-mode": "^3.5.2",
-    "nuxt": "^3.16.2"
+    "@nuxtjs/sitemap": "^7.2.10",
+    "@nuxtjs/tailwindcss": "^6.13.2",
+    "nuxt": "^3.16.2",
+    "tailwindcss": "^3.4.1",
+    "vue-i18n": "^11.1.3"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^9.5.3",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4"
+    "postcss": "^8.5.3"
   }
 }
